update maven, dependency plugins